kubernetes/apps/home/home/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  labels:
    app: home
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      containers:
        - name: home
          image: ghcr.io/konnektr-io/home:0.1.4
          imagePullPolicy: Always # remove once we move to production
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
