kubernetes/apps/home/home/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home
  labels:
    app: home
spec:
  selector:
    app: home
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
